background color update

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -81,7 +81,7 @@ h1 {
 #strains li {
   margin: 3px;
   padding: 3px 5px;
-  background-color: #74ffe6;
+  background-color: #aeffeb;
 }
 
 #pagination {
