data fixer for genetics/seed company

--- a/templates/directory.tmpl
+++ b/templates/directory.tmpl
@@ -2,7 +2,7 @@
 
 <ul id="strains">
   {{range .strains}}
-    <li>{{.Name}}</li>
+    <li>{{.Name}} - {{.SeedCompanyName}} {{.SeedCompanyUcpc}}</li>
   {{end}}
 </ul>
 
