--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -6,7 +6,7 @@
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link href='//fonts.googleapis.com/css?family=Lekton' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="media/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/media/css/main.css">
   </head>
   <body>
     <header>
