--- a/media/css/main.css
+++ b/media/css/main.css
@@ -49,7 +49,7 @@ table {
 
 body {
   background-color: #fff;
-  font-family: Lekton;
+  font-family: Heebo, sans-serif;
 }
 
 #wrapper {
@@ -63,37 +63,140 @@ header {
 
 header a {
   text-decoration: none;
-  padding: 10px;
+  padding: 8px;
+  font-size: 0.85rem;
   display: inline-block;
   color: #f1f1f1;
 }
 
 header a:hover {
-  background-color: #aaa;
+  background-color: #fff;
   color: #111;
+}
+
+h1, header, #pagination a, .minutes h3 {
+  font-family: 'Montserrat Subrayada', sans-serif;
 }
 
 h1 {
   margin: 20px 0;
-  font-size: 1.8rem;
+  font-size: 1.7rem;
 }
 
 p, h2 {
   margin: 10px 0;
 }
 
+h2 {
+  font-size: 1.35rem;
+}
+
+#strains {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 #strains li {
   margin: 3px;
-  background-color: #f1f1f1;
+  background-color: #f5f5f5;
+  min-width: 280px;
+  width: 30%;
+  float: left;
+  overflow: hidden;
 }
 
 #strains li a {
   text-decoration: none;
   display: block;
   padding: 5px 10px;
+  color: #111;
+}
+
+#strains li a h2 {
+  font-size: 1rem;
+}
+
+#strain-detail img {
+  height: 200px;
+}
+
+#strains li a:hover {
+  background-color: #48efce;
+  color: #1659b3;
+}
+
+label {
+  display: block;
+  margin: 20px 0 5px;
+}
+
+.minutes {
+  padding: 10px 20px 5px 20px;
+  margin: 1px;
+  background-color: #f1f1f1;
+}
+
+.review {
+  border: 2px solid #111;
+  margin: 10px 0;
+}
+
+.review .comments, .review > a > h3, .review > h3 {
+  padding: 20px;
+}
+
+.review .comments {
+  white-space: pre-wrap;
+  line-height: 1.2rem;
+}
+
+.review h3 {
+  font-size: 1.2rem;
+}
+
+.review > a {
+  text-decoration: none;
+  outline: none;
+}
+
+.review > a > * {
+  color: #111;
+}
+
+input[type="text"], textarea {
+  font-family: Heebo, sans-serif;
+  padding: 2px;
+  font-size: 1.1rem;
+  border: 1px solid #111;
+  width: 70%;
+}
+
+textarea {
+  max-height: 300px;
+  min-height: 80px;
+  resize: vertical;
+}
+
+button {
+  display: block;
+  margin: 10px 0 30px;
 }
 
 #pagination {
   margin: 20px 0;
-  padding: 5px;
+}
+
+#pagination a {
+  display: inline-block;
+  font-size: 1rem;
+  margin-right: 20px;
+  padding: 10px;
+  background-color: #111;
+  color: #fff;
+  text-decoration: none;
+}
+
+#pagination a:hover {
+  color: #111;
+  background-color: transparent;
 }
