--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -5,11 +5,12 @@
     <meta content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <link href='//fonts.googleapis.com/css?family=Lekton' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Heebo:300|Montserrat+Subrayada' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/media/css/main.css">
   </head>
   <body>
     <header>
+      <a href="/">/</a>
       <a href="/directory">directory</a>
     {{ if .session }}
       <a href="/profile">profile</a>
