--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -3,27 +3,27 @@
 {{range .reviews}}
   <div class="review">
     <a href="/strain/{{.Ucpc}}">
-      <h3>Grower: {{.Grower}}</h3>
+      <h3>{{.Strain}} / {{.Grower}}</h3>
       {{if .FiveMin}}
-        <div class="minutes">
+        <div class="minutes five">
           <h3>5 minutes</h3>
           <p>{{.FiveMin}}</p>
         </div>
       {{end}}
       {{if .TenMin}}
-        <div class="minutes">
+        <div class="minutes ten">
           <h3>10 minutes</h3>
           <p>{{.TenMin}}</p>
         </div>
       {{end}}
       {{if .FifteenMin}}
-        <div class="minutes">
+        <div class="minutes fifteen">
           <h3>15 minutes</h3>
           <p>{{.FifteenMin}}</p>
         </div>
       {{end}}
       {{if .TwentyMin}}
-        <div class="minutes">
+        <div class="minutes twenty">
           <h3>20 minutes</h3>
           <p>{{.TwentyMin}}</p>
         </div>
