--- a/media/css/main.css
+++ b/media/css/main.css
@@ -74,6 +74,15 @@ h1, #wrapper > h2, section {
   padding: 20px;
 }
 
+h1 a {
+  text-decoration: none;
+  color: #111;
+}
+
+h1 a:hover {
+  color: #48efce;
+}
+
 h1, header, #pagination a, .minutes h3 {
   font-family: 'Montserrat Subrayada', sans-serif;
 }
@@ -98,7 +107,7 @@ h2 {
 #strains li {
   margin: 3px;
   background-color: #f5f5f5;
-  width: 280px;
+  width: 290px;
   float: left;
   overflow: hidden;
 }
@@ -107,6 +116,7 @@ h2 {
   text-decoration: none;
   display: block;
   padding: 5px 10px;
+  line-height: 1.1rem;
   color: #111;
 }
 
@@ -114,7 +124,12 @@ h2 {
   font-size: 1rem;
 }
 
+#strain-detail {
+  padding: 0 20px;
+}
+
 #strain-detail img {
+  display: none;
   height: 200px;
 }
 
@@ -129,7 +144,7 @@ label {
 }
 
 .minutes {
-  padding: 10px 20px 5px 20px;
+  padding: 10px 10px 5px 15px;
   margin: 1px;
   background-color: #f1f1f1;
 }
@@ -141,44 +156,67 @@ label {
 .review {
   margin: 10px 0;
   background-color: #d7f9ff;
+  position: relative;
 }
 
 .five {
   background-color: #9cf5ff;
 }
 
+.five h3 {
+  color: #67d1dd;
+}
+
 .ten {
   background-color: #73e4f1;
+}
+
+.ten h3 {
+  color: #4fc2cf;
 }
 
 .fifteen {
   background-color: #6aceef;
 }
 
+.fifteen h3 {
+  color: #46abcc;
+}
+
 .twenty {
   background-color: #52c7f2;
 }
 
+.twenty h3 {
+  color: #319dc5;
+}
+
+.add-review label {
+  margin-top: 0;
+}
+
 .review .comments, .review > a > h3, .review > h3 {
-  padding: 15px;
+  padding: 10px;
 }
 
 .review .comments {
   white-space: pre-wrap;
-  line-height: 1.2rem;
+  line-height: 0.95rem;
 }
 
 .review h3 {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .review .minutes h3 {
-  font-size: 1.2rem;
+  font-size: 1rem;
   display: inline;
+  margin-right: 5px;
 }
 
 .review .minutes p {
   display: inline;
+  font-size: 0.9rem;
 }
 
 .review > a {
@@ -191,7 +229,40 @@ label {
 }
 
 .add-review {
-  background-color: #f1f1f1;
+  background-color: #d7f9ff;
+  padding: 10px 0;
+  margin-bottom: 10px;
+  border-bottom: 5px solid #111;
+}
+
+.add-review form div, .add-review form p {
+  padding: 10px 20px;
+}
+
+.add-review form textarea, .add-review button {
+  margin: 10px 20px;
+}
+
+.delete {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px 15px 5px 5px;
+  font-size: 0.8rem;
+  background-color: #ccc;
+  text-transform: uppercase;
+  color: #666;
+  opacity: 0.5;
+  transition: all 1s;
+  -webkit-transition: all 1s;
+}
+
+.delete:hover {
+  opacity: 1.0;
+  background-color: #f00;
+  color: #ffb9c5;
+  transition: all 1s;
+  -webkit-transition: all 1s;
 }
 
 input[type="text"], textarea {
@@ -215,6 +286,10 @@ button {
 
 section.search {
   padding-bottom: 0;
+}
+
+section.profile {
+  padding: 0 20px;
 }
 
 #pagination {
