--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,36 +1,1 @@
-<h1>Leaves</h1>
-
-{{range .reviews}}
-  <div class="review">
-    <a href="/strain/{{.Ucpc}}">
-      <h3>{{.Strain}} / {{.Grower}}</h3>
-      {{if .FiveMin}}
-        <div class="minutes five">
-          <h3>5 minutes</h3>
-          <p>{{.FiveMin}}</p>
-        </div>
-      {{end}}
-      {{if .TenMin}}
-        <div class="minutes ten">
-          <h3>10 minutes</h3>
-          <p>{{.TenMin}}</p>
-        </div>
-      {{end}}
-      {{if .FifteenMin}}
-        <div class="minutes fifteen">
-          <h3>15 minutes</h3>
-          <p>{{.FifteenMin}}</p>
-        </div>
-      {{end}}
-      {{if .TwentyMin}}
-        <div class="minutes twenty">
-          <h3>20 minutes</h3>
-          <p>{{.TwentyMin}}</p>
-        </div>
-      {{end}}
-      {{if .Comments}}
-        <p class="comments">{{.Comments}}</p>
-      {{end}}
-    </a>
-  </div>
-{{end}}
+<h1>Latest Reviews</h1>
