--- a/templates/review.tmpl
+++ b/templates/review.tmpl
@@ -25,7 +25,7 @@
     {{end}}
     {{if .review.TwentyMin}}
       <div class="minutes twenty">
-        <h3>20 minutes</h3>
+        <h3>20+ minutes</h3>
         <p>{{.review.TwentyMin}}</p>
       </div>
     {{end}}
