--- a/templates/strain.tmpl
+++ b/templates/strain.tmpl
@@ -29,7 +29,7 @@
           <input type="text" name="fifteenMin">
         </div>
         <div class="twenty">
-          <label for="twentyMin" name="twentyMin">20 minutes?</label>
+          <label for="twentyMin" name="twentyMin">20+ minutes?</label>
           <input type="text" name="twentyMin">
         </div>
         <p>Any additional comments, notes and/or stories about this strain?</p>
