--- a/templates/directory.tmpl
+++ b/templates/directory.tmpl
@@ -1,6 +1,6 @@
 <section class="search">
   <form method="post" action="/search">
-    <p>Search is currently case sensitive. Will fix later.</p>
+    <p>Search requires a prefix.</p>
     <input type="text" name="name" placeholder="SEARCH" value="{{.search}}">
     {{.csrfField}}
     <button type="submit">Find</button>
